fixed gap header, added margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 76px;
 }
 
 .logo {
@@ -178,7 +177,7 @@ a {
   align-items: center;
   justify-content: flex-start;
   flex-direction: row;
-  gap: 32px;
+  gap: 76px;
   flex-grow: 1;
 }
 
@@ -211,7 +210,6 @@ a {
   flex-wrap: wrap;
   gap: 24px;
   padding: 0;
-  margin: 0;
   list-style: none;
 }
 .features-item {
@@ -220,12 +218,13 @@ a {
 .visually-hidden {
   position: absolute;
   width: 1px;
+  height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
   white-space: nowrap;
   clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
 .text-features {
@@ -234,6 +233,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-top: 8px;
 }
 .team .container {
   display: flex;
@@ -285,6 +285,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-top: 8px;
 }
 
 .portfolio .container {
@@ -293,6 +294,11 @@ a {
   justify-content: center;
   flex-direction: column;
   align-content: center;
+}
+.portfolio-main-title {
+  text-align: center;
+  margin-bottom: 72px;
+
 }
 .grid-list {
   flex-wrap: wrap;
@@ -317,6 +323,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  margin-top: 8px;
 }
 
 .portfolio-part {
@@ -338,6 +345,7 @@ a {
 
 .footer-logo {
   display: block;
+  margin-bottom: 16px;
 }
 
 .footer-text {
